# callbackin

./: .gitignore  LICENSE  README.md  composer.json  docker-compose.yaml  package.json
.github/workflows/: clone-and-test.yaml  deploy-server-on-vps.yaml
client/: README.md  pyproject.toml
client/callbackin/: __main__.py  main.py
client/callbackin/handler/: callback.py  login.py
client/callbackin/schemas/: callback.py
client/callbackin/utils/: config.py  request.py
config/: callbackin.php
dashboard/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.vue  main.ts  router.ts
dashboard/src/components/: button.vue
dashboard/src/pages/: index.vue
dashboard/src/pages/dashboard/: index.vue
dashboard/src/pages/login/: handler.vue  index.vue
dashboard/src/utils/: axios.ts  conts.ts  urlsconst.ts
deployment/server/: Dockerfile
server/: .env.example  main.py  package.json  pytest.ini  requirements.txt
server/models/: __init__.py  callback.py  callback_history.py  user.py
server/routers/: __init__.py  auth.py  callback.py  handler.py
server/schemas/: callback.py
server/tests/: callback_test.py  conftest.py  handler_test.py  jwt_test.py  main_test.py  mqtt_test.py  test_auth.py
server/utils/: config.py  db.py  jwt.py  mqtt.py
src/: CallbackinServiceProvider.php
src/Commands/: ListenCommand.php
